Alignment issue fixed

--- a/src/components/ProductCard/styles.scss
+++ b/src/components/ProductCard/styles.scss
@@ -79,7 +79,6 @@
     display: flex;
     flex-wrap: wrap;
     margin: 3rem -10px 0;
-    align-items: baseline;
   }
 }
 
